--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('contact') }}">İletişim</a>
               </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('profile') }}">Profil</a>
+              </li>
             </ul>
             
       
