--- a/templates/register.html
+++ b/templates/register.html
@@ -23,6 +23,10 @@
                     <label class="form-label">E-Posta Adresi</label>
                     <input type="email" class="form-control" name="email" autocomplete="off" required>
                 </div>
+                <div class="mb-3">
+                    <label class="form-label">Kullanıcı Adı</label>
+                    <input type="text" class="form-control" name="username" autocomplete="off" required>
+                </div>
                 
                 <div class="mb-3">
                     <label class="form-label">Şifre</label>
