profile page is almost done

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}Veri Üretim{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
     {% block head %}{% endblock %}
@@ -27,7 +28,7 @@
                 <!-- Sağ Menü -->
                 <div class="space-x-4">
                     {% if current_user.is_authenticated %}
-                        <span class="text-sm text-gray-300">Merhaba, {{ current_user.username }}</span>
+                        
                         <a href="{{ url_for('logout') }}" class="hover:text-red-300">Çıkış Yap</a>
                     {% else %}
                         <a href="{{ url_for('login') }}" class="hover:text-green-300">Giriş Yap</a>
